--- a/bitnami/mxnet/templates/configmap.yaml
+++ b/bitnami/mxnet/templates/configmap.yaml
@@ -10,4 +10,4 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 data:
 {{ (.Files.Glob "files/*").AsConfig | indent 2 }}
-{{ end }}
+{{- end }}
