--- a/bitnami/mxnet/templates/scheduler-deployment.yaml
+++ b/bitnami/mxnet/templates/scheduler-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     helm.sh/chart: {{ include "mxnet.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/component: "scheduler"
+    app.kubernetes.io/component: scheduler
 spec:
   replicas: 1 
   selector:
@@ -31,14 +31,14 @@ spec:
         fsGroup: {{ .Values.securityContext.fsGroup }}
         runAsUser: {{ .Values.securityContext.runAsUser }}
       {{- end }}
-      {{- if .Values.nodeSelector }}
-      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- with .Values.tolerations }}
+      tolerations: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
-      {{- if .Values.affinity }}
-      affinity: {{ toYaml .Values.affinity | nindent 8 }}
+      {{- with .Values.affinity }}
+      affinity: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       {{- if .Values.cloneFilesFromGit.enabled }}
       initContainers:
@@ -49,9 +49,7 @@ spec:
         - /bin/sh
         - -c
         - |
-          git clone {{ .Values.cloneFilesFromGit.repository }} /app
-          cd /app
-          git checkout {{ .Values.cloneFilesFromGit.revision }}
+          git clone {{ .Values.cloneFilesFromGit.repository }} --branch {{ .Values.cloneFilesFromGit.revision }} /app
         volumeMounts:
         - name: git-cloned-files
           mountPath: /app
@@ -125,10 +123,10 @@ spec:
         {{- end }}
         - name: data
           mountPath: {{ .Values.persistence.mountPath }}
-      {{- if .Values.existingSecret }}
+        {{- if .Values.existingSecret }}
         - name: secret-data
           mountPath: /secrets
-      {{- end }}
+        {{- end }}
     {{- if .Values.sidecars }}
       {{- toYaml .Values.sidecars | nindent 6 }}
     {{- end }}
