--- a/bitnami/mxnet/templates/worker-statefulset.yml
+++ b/bitnami/mxnet/templates/worker-statefulset.yml
@@ -24,7 +24,7 @@ spec:
         app.kubernetes.io/name: {{ include "mxnet.name" . }}
         helm.sh/chart: {{ include "mxnet.chart" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/component: "worker"
+        app.kubernetes.io/component: worker
     spec:
       {{- include "mxnet.imagePullSecrets" . | nindent 6 }}
       {{- if .Values.securityContext.enabled }}
@@ -32,14 +32,14 @@ spec:
         fsGroup: {{ .Values.securityContext.fsGroup }}
         runAsUser: {{ .Values.securityContext.runAsUser }}
       {{- end }}
-      {{- if .Values.nodeSelector }}
-      nodeSelector: {{ toYaml .Values.server.nodeSelector | nindent 8 }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations: {{ toYaml .Values.server.tolerations | nindent 8 }}
+      {{- with .Values.tolerations }}
+      tolerations: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
-      {{- if .Values.affinity }}
-      affinity: {{ toYaml .Values.server.affinity | nindent 8 }}
+      {{- with .Values.affinity }}
+      affinity: {{ tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       {{- if .Values.cloneFilesFromGit.enabled }}
       initContainers:
@@ -50,9 +50,7 @@ spec:
         - /bin/sh
         - -c
         - |
-          git clone {{ .Values.cloneFilesFromGit.repository }} /app
-          cd /app
-          git checkout {{ .Values.cloneFilesFromGit.revision }}
+          git clone {{ .Values.cloneFilesFromGit.repository }} --branch {{ .Values.cloneFilesFromGit.revision }} /app
         volumeMounts:
         - name: git-cloned-files
           mountPath: /app
@@ -134,13 +132,13 @@ spec:
         {{- end }}
         - name: data
           mountPath: {{ .Values.persistence.mountPath }}
-      {{- if .Values.existingSecret }}
+        {{- if .Values.existingSecret }}
         - name: secret-data
           mountPath: /secrets
-      {{- end }}
+        {{- end }}
     {{- if .Values.sidecars }}
       {{- toYaml .Values.sidecars | nindent 6 }}
-    {{- end }}
+      {{- end }}
       volumes:
       {{- if .Values.existingSecret }}
       - name: secret-data
