--- a/bitnami/mxnet/templates/worker-statefulset.yml
+++ b/bitnami/mxnet/templates/worker-statefulset.yml
@@ -8,7 +8,7 @@ metadata:
     helm.sh/chart: {{ include "mxnet.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/component: "worker"
+    app.kubernetes.io/component: worker
 spec:
   podManagementPolicy: {{ .Values.podManagementPolicy }}
   serviceName: {{ template "mxnet.fullname" . }}-headless
@@ -16,7 +16,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ include "mxnet.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
-      app.kubernetes.io/component: "worker"
+      app.kubernetes.io/component: worker
   replicas: {{ .Values.workerCount }}
   template:
     metadata:
