--- a/bitnami/mxnet/templates/scheduler-service.yaml
+++ b/bitnami/mxnet/templates/scheduler-service.yaml
@@ -8,7 +8,7 @@ metadata:
     helm.sh/chart: {{ include "mxnet.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/component: "scheduler"
+    app.kubernetes.io/component: scheduler
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -18,5 +18,5 @@ spec:
   selector:
     app.kubernetes.io/name: {{ include "mxnet.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/component: "scheduler"
+    app.kubernetes.io/component: scheduler
 {{- end }}
