--- a/bitnami/mxnet/values-production.yaml
+++ b/bitnami/mxnet/values-production.yaml
@@ -115,17 +115,17 @@ cloneFilesFromGit:
 ## StatefulSet pod management policy
 podManagementPolicy: Parallel
 
-## Node labels for pod assignment
+## Node labels for pod assignment (this value is evaluated as a template)
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
 nodeSelector: {}
 
-## Tolerations for pod assignment
+## Tolerations for pod assignment (this value is evaluated as a template)
 ## Ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
 ##
 tolerations: []
 
-## Affinity for pod assignment
+## Affinity for pod assignment (this value is evaluated as a template)
 ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
 ##
 affinity: {}
