--- a/bitnami/etcd/templates/secrets.yaml
+++ b/bitnami/etcd/templates/secrets.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app.kubernetes.io/name: {{ template "etcd.name" . }}
     helm.sh/chart: {{ template "etcd.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
   {{- if .Values.auth.rbac.rootPassword }}
