--- a/bitnami/etcd/templates/cronjob.yaml
+++ b/bitnami/etcd/templates/cronjob.yaml
@@ -64,5 +64,5 @@ spec:
               defaultMode: 0755
           - name: snapshot-volume
             persistentVolumeClaim:
-              claimName: {{ template "etcd.fullname" . }}-snapshotter
+              claimName: {{ template "etcd.disasterRecovery.pvc.name" . }}
 {{- end }}
