--- a/bitnami/etcd/templates/snapshot-pvc.yaml
+++ b/bitnami/etcd/templates/snapshot-pvc.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.disasterRecovery.enabled -}}
+{{- if and .Values.disasterRecovery.enabled (not .Values.disasterRecovery.pvc.existingClaim) -}}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
