--- a/bitnami/kubeapps/values.yaml
+++ b/bitnami/kubeapps/values.yaml
@@ -254,6 +254,8 @@ mongodb:
     enabled: false
   # MongoDB credentials are handled by kubeapps to facilitate upgrades
   existingSecret: kubeapps-mongodb
+  securityContext:
+    enabled: false
   # https://github.com/kubeapps/kubeapps/issues/478#issuecomment-422979262
   resources:
     limits:
