--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -18,7 +18,7 @@ image:
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
   ##
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   ## Optionally specify an array of imagePullSecrets.
   ## Secrets must be manually created in the namespace.
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
@@ -28,7 +28,6 @@ image:
 
 service:
   ## Kubernetes service type
-  # nodePort:
   type: ClusterIP
   port: 3306
 
@@ -171,6 +170,7 @@ master:
     failureThreshold: 3
   readinessProbe:
     enabled: true
+    ##
     ## Initializing the database could take some time
     initialDelaySeconds: 30
     ##
@@ -248,6 +248,7 @@ slave:
     failureThreshold: 3
   readinessProbe:
     enabled: true
+    ##
     ## Initializing the database could take some time
     initialDelaySeconds: 30
     ##
