[bitnami/pytorch] Unify and document production values
Signed-off-by: Carlos Rodriguez Hernandez <crhernandez@bitnami.com>

--- a/bitnami/pytorch/values-production.yaml
+++ b/bitnami/pytorch/values-production.yaml
@@ -38,7 +38,7 @@ git:
   registry: docker.io
   repository: bitnami/git
   tag: 2.21.0-debian-9-r72
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   ## Optionally specify an array of imagePullSecrets.
   ## Secrets must be manually created in the namespace.
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
