--- a/bitnami/magento/values.yaml
+++ b/bitnami/magento/values.yaml
@@ -163,7 +163,7 @@ mariadb:
 elasticsearch:
   ## Whether to deploy a elasticsearch server to use as magento's search engine
   ## To use an external server set this to false and configure the externalElasticsearch parameters
-  enabled: false
+  enabled: true
   sysctlImage:
     enabled: false
   master:
@@ -172,7 +172,6 @@ elasticsearch:
     replicas: 1
   data:
     replicas: 1
-
 
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
