--- a/bitnami/etcd/values-production.yaml
+++ b/bitnami/etcd/values-production.yaml
@@ -213,6 +213,18 @@ metrics:
     prometheus.io/scrape: "true"
     prometheus.io/port: "2379"
 
+## Start a new etcd cluster recovering the data from an existing snaptshot before
+## initializing the members
+##
+startFromSnapshot:
+  enabled: false
+  ## Existingn PVC containing the etcd snapshot
+  ##
+  # existingClaim
+  ## Snapshot filename
+  ##
+  # snapshotFilename
+
 ## Enable auto disaster recovery by periodically snapshotting the keyspace
 ## - It creates a cronjob to periodically snapshotting the keyspace
 ## - It also creates a ReadWriteMany PVC to store the snapshots
